2015-01-31 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-04-03: Bug fix, make sure that product's precompile rule
	is called before the gch generation.

2015-01-14 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-04-02: Various fixes
	- For patch release buils, add base release src directory in to
	CMSSW_SEARCH_PATH
	- For missing src/package/python directory create
	python/package/__init__.py file to append cfipython/package
	in python path.
	- generate .gch.cxxflags files for precompile headers.

2015-01-07 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-04-01: Support for precompile headers. If a package has
	src/precompile.h file then scram will generate
	LOCALTOP/include/<arch>/<package>/src/precompile.h.gch.

2014-12-19 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-04-00: Moved findDependencies.pl from the cmsdist. Update
	cmsdist/scram-project-build to use this.
	Cleanup for rootdict source dependency.

2014-12-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-31: Cleanup for ClassVersion check and print the
	scram command for updating the class version.

2014-11-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-30: Drop support for ROOTMAP BuildFile flag and always
	generate .rootmap file if supported by root external tool.

2014-11-25 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-29: Various features added
	- SCRAM_TEST_RUNNER_PREFIX: Runtime environment variable which
	scram can append before any unittest e.g. one use of it could be
	to run unit test under valgrind or timeout etc.
	- generate  ;lib/arch/.poisonededmplugincache for all the
	packages locallt built or deleted.
2014-10-27 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-03-28: Help message updated; some cleanup;
	Do not add biglib path if biglib is disabled in the dev area.

2014-10-13 Patrick Gartung  <gartung@fnal.gov>

	* V05-03-27: Fixed dxr.config file; passed -k gmake option and
	exit with 0 for dxr rule.
